# MJ_COIN

./: CMakeLists.txt  README.md  block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  main.cpp  sha256.cpp  sha256.hpp
Test/: main.cpp
